--- a/style.css
+++ b/style.css
@@ -274,12 +274,47 @@ section #pendidikan p, #pengalaman p {
     font-size: 0.9em;
 }
 
+section #pengalaman .pengalaman-galeri {
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+}
+
 section #pengalaman img {
-    width: 300px;
-    height: auto;
-    margin: 0px 30px;
+    width: 250px;
+    height: 170px;
+    object-fit: cover;
+    margin: 0px 0px 0px 30px;
     border-radius: 10px;
     border: 2px solid #2B32DB;
+}
+
+section #keahlian .keahlian-galeri {
+    display: flex;
+    flex-direction: row;
+}
+
+section #keahlian img {
+    width: 80px;
+    height: auto;
+    margin: 80px 0px 0px 50px;
+}
+
+section #keahlian #icon-1 {
+    animation: float 3s ease-in-out infinite;
+}
+
+section #keahlian #icon-2 {
+    animation: float 4s ease-in-out infinite;
+}
+
+@keyframes float {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-15px);
+    }
 }
 
 aside {
